# json-paper

.github/workflows/: build.yml  release.yml
Arduino/src/Canvas/: GUI_Paint.cpp  GUI_Paint.h
Arduino/src/Config/: DEV_Config.h  Debug.h
Emulator/: CMakeLists.txt
Emulator/src/: debug.h  main.cpp
Emulator/src/GUI/: gui_raylib.cpp  gui_raylib.h
Emulator/src/UI/: button.cpp  button.h  input_field.cpp  input_field.h
Emulator/src/e-Paper/: Command.cpp  Command.h  command.cpp  command.h  paper_command.cpp  paper_command.h
Emulator/src/emulation/: EPD_Test.h  emulation.cpp  epd_test.h
Emulator/src/manager/: console_manager.cpp  console_manager.h
Emulator/src/network/: request.cpp  request.h
Emulator/src/util/dev/console/: console.cpp  console.h  font_data.h
Emulator/src/util/dev/console/command/: auto_completion.cpp  auto_completion.h  registry.cpp  registry.h
Emulator/src/util/dev/console/command/commands/: core_command.cpp  core_command.h
